# testing-tricks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compares.py  main.py  pyproject.toml
tests/: compares_test.py
