[project]
name = "testing-tricks"
version = "0.1.0"
description = "Python testing tricks"
readme = "README.md"
requires-python = ">=3.13.3"
authors = [{name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com"}]
license = "MIT"
dependencies = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]
[tool.pytest.ini_options]
addopts = """
    --cov=.
    --cov-report term-missing
    --cov-report html:htmlcov
"""
[tool.coverage.run]
omit = [
    "__init__.py",
    "tests/*",
]
